--- a/RPI/control/resources/config.yml
+++ b/RPI/control/resources/config.yml
@@ -1,5 +1,5 @@
-HOST: localhost #192.168.1.10
-GEN_PORT: 8080
+HOST: 192.168.1.10
+GEN_PORT: 8082
 VIDEO_PORT: 8081
 IMAGE_SIZE: 768
 PASSWORD: "loh"
